--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -103,7 +103,7 @@
                 <img src="https://github.com/ponfee/disjob/workflows/build-with-maven/badge.svg" alt="Build status" style="max-width: 100%;">
               </a>
               <a href="https://central.sonatype.com/namespace/cn.ponfee" rel="nofollow">
-                <img src="https://camo.githubusercontent.com/05c0618501a8f84806b83331363295d9f12c55a342b60eb95e8f7408c9c1d166/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6d6176656e2d2d63656e7472616c2d312e31322d6f72616e67652e7376673f7374796c653d706c6173746963266c6f676f3d6170616368656d6176656e" alt="Maven Central" data-canonical-src="https://img.shields.io/badge/maven--central-2.0.0-orange.svg?style=plastic&amp;logo=apachemaven" style="max-width: 100%;">
+                <img src="https://camo.githubusercontent.com/d4e896a34f2211d2a5f4ae36d31eea3a31e684b2837e2bb21b658b5d0e1e4edf/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6d6176656e2d2d63656e7472616c2d322e302e302d6f72616e67652e7376673f7374796c653d706c6173746963266c6f676f3d6170616368656d6176656e" alt="Maven Central" data-canonical-src="https://img.shields.io/badge/maven--central-2.0.0-orange.svg?style=plastic&amp;logo=apachemaven" style="max-width: 100%;">
               </a>
             </p>
             <p dir="auto">
@@ -451,7 +451,7 @@
               <li class="task-list-item">
                 <input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 工作流任务(Workflow DAG)</li>
               <li class="task-list-item">
-                <input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 任务管理后台Web UI、账户体系及权限控制</li>
+                <input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 任务管理后台、账户体系及权限控制</li>
               <li class="task-list-item">
                 <input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 搭建一个关于项目使用说明的文档站点</li>
               <li class="task-list-item">
