--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -171,7 +171,10 @@
     },
     {
       field: 'retriedCount',
-      title: '已重试次数'
+      title: '已重试次数',
+      formatter: function (value, row, index) {
+          return value === 0 ? "-" : value;
+      }
     },
     {
       field: 'attach',
