--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -112,6 +112,7 @@
     expandColumn: 1,
     pagination: true,
     removeUrl: prefix + "/remove/{id}",
+    modalName: "调度实例",
     columns: [{
       field: 'selectItem',
       radio: true
@@ -232,8 +233,7 @@
       code: "instanceId",
       parentCode: "pnstanceId",
       url: prefix + "/tree",
-      dataUrl: prefix + "/children",
-      modalName: "调度实例-tree"
+      dataUrl: prefix + "/children"
     }, defaultOps);
     $.treeTable.init(treeOps);
 
@@ -242,8 +242,7 @@
       formId: "flat-form",
       toolbar: "flat-toolbar",
       url: prefix + "/flat",
-      firstLoad: false,
-      modalName: "调度实例-flat"
+      firstLoad: false
     }, defaultOps);
     $.table.init(flatOps);
 
