--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/monitor/online/online.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/monitor/online/online.html
@@ -24,13 +24,13 @@
 					</div>
 				</form>
 			</div>
-			
+
 	        <div class="btn-group-sm" id="toolbar" role="group">
-	            <a class="btn btn-danger multiple disabled" onclick="javascript:batchForceLogout()" shiro:hasPermission="monitor:online:batchForceLogout">
+	            <a class="btn btn-danger multiple disabled" onclick="batchForceLogout()" shiro:hasPermission="monitor:online:batchForceLogout">
 	                <i class="fa fa-sign-out"></i> 强退
 	            </a>
 	        </div>
-	        
+
 	        <div class="col-sm-12 select-table table-striped">
 			    <table id="bootstrap-table"></table>
 			</div>
