--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -170,7 +170,7 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-                    <a href="javascript:;" class="active menuTab" th:data-id="@{/system/main}">首页</a>
+                    <a href="javascript:" class="active menuTab" th:data-id="@{/system/main}">首页</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
