--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/login.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
             <div class="col-sm-7">
                 <div class="signin-info">
                     <div class="m-b"></div>
-                    <h4 style="color: #004d8c; font-weight: bold;">欢迎使用 <strong>Disjob 后台管理系统</strong></h4>
+                    <h4 style="color: #004d8c; font-weight: bold;">欢迎使用 <strong>Disjob 管理后台</strong></h4>
                     <strong th:if="${isAllowRegister}">还没有账号？ <a th:href="@{/register}">立即注册&raquo;</a></strong>
                 </div>
             </div>
