--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -130,7 +130,7 @@
                         <li>工程结构</li>
                     </ul>
                     <div class="snippet-clipboard-content notranslate position-relative overflow-auto" data-snippet-clipboard-copy-content="disjob                                                    # 主项目
-├── disjob-admin                                          # 基于Ruoyi框架二次开发的Disjob后台管理系统
+├── disjob-admin                                          # 基于Ruoyi框架二次开发的Disjob管理后台
 ├── disjob-bom                                            # Maven project bom module
 ├── disjob-common                                         # 工具包
 ├── disjob-core                                           # 任务调度相关的核心类（如数据模型、枚举类、抽象层接口等）
@@ -156,7 +156,7 @@
 ├── disjob-supervisor                                     # Supervisor代码（Spring-boot应用）
 ├── disjob-test                                           # 用于辅助测试
 └── disjob-worker                                         # Worker代码"><pre lang="Plain" class="notranslate"><code>disjob                                                    # 主项目
-├── disjob-admin                                          # 基于Ruoyi框架二次开发的Disjob后台管理系统
+├── disjob-admin                                          # 基于Ruoyi框架二次开发的Disjob管理后台
 ├── disjob-bom                                            # Maven project bom module
 ├── disjob-common                                         # 工具包
 ├── disjob-core                                           # 任务调度相关的核心类（如数据模型、枚举类、抽象层接口等）
@@ -299,7 +299,7 @@ public class MergedApplication extends AbstractSamplesApplication {
                     </ol>
                     <ul dir="auto">
                         <li><a href="https://github.com/ponfee/disjob/blob/master/disjob-admin/ruoyi-admin/src/main/java/com/ruoyi/RuoYiApplication.java">启动java类</a></li>
-                        <li>启动成功后浏览器访问 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 进入后台管理系统（用户名密码：admin/admin123）</li>
+                        <li>启动成功后浏览器访问 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 进入管理后台（用户名密码：admin/admin123）</li>
                         <li>登录后在左侧菜单栏找到<code>调度管理</code>菜单，即可使用后台管理功能
                             <ul dir="auto">
                                 <li>调度配置：查看、新增、修改等</li>
