--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/register.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/register.html
@@ -22,9 +22,12 @@
         <div class="row">
             <div class="col-sm-7">
                 <div class="signin-info">
+                    <div class="logopanel m-b">
+                        <h1><img alt="[ Disjob ]" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:162px; height:52px;"></h1>
+                    </div>
                     <div class="m-b"></div>
-                    <h4 style="color: #004d8c; font-weight: bold;">欢迎使用 <strong>Disjob后台管理</strong></h4>
-                    <strong>已经注册过? <a th:href="@{/login}">直接登录&raquo;</a></strong>
+                    <h4 style="color:#004d8c; font-weight:bold;">欢迎使用 <strong>Disjob后台管理</strong></h4>
+                    <strong style="color:#bb2e2e;">已经注册过？&nbsp;<a style="color:#004d8c;" th:href="@{/login}">直接登录 &raquo;</a></strong>
                 </div>
             </div>
             <div class="col-sm-5">
