--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/index.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
         </div>
         <a th:href="@{/index}">
             <li class="logo hidden-xs">
-                <span class="logo-lg">Disjob</span>
+                <img alt="Disjob" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:100px; height:32px;">
             </li>
          </a>
         <div class="sidebar-collapse">
