--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/login.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/login.html
@@ -28,9 +28,7 @@
         <div class="row">
             <div class="col-sm-7">
                 <div class="signin-info">
-                    <div class="logopanel m-b">
-                        <h1><img alt="[ Disjob ]" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:162px; height:52px;"></h1>
-                    </div>
+                    <img alt="[ Disjob ]" src="../static/disjob.png" th:src="@{/disjob.png}" style="width:162px; height:52px;" />
                     <div class="m-b"></div>
                     <h4 style="color:#004d8c; font-weight:bold;">欢迎使用 <strong>Disjob 管理后台</strong></h4>
                     <strong style="color:#bb2e2e;" th:if="${isAllowRegister}">还没有账号？&nbsp;<a style="color:#004d8c;" th:href="@{/register}">立即注册 &raquo;</a></strong>
