optimize html page

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
@@ -37,7 +37,7 @@
           field: 'taskParam',
           title: '任务参数',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 20);
+            return $.table.tooltip(value, 20, "open");
           }
         },
         {
@@ -67,21 +67,21 @@
           field: 'executeSnapshot',
           title: '执行结果',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 20);
+            return $.table.tooltip(value, 20, "open");
           }
         },
         {
           field: 'worker',
           title: '执行机器',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 20);
+            return $.table.tooltip(value, 20, "open");
           }
         },
         {
           field: 'errorMsg',
           title: '异常信息',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 20);
+            return $.table.tooltip(value, 20, "open");
           }
         }]
       };
