--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
@@ -113,7 +113,7 @@
           field: 'triggerValue',
           title: '触发器配置',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 20);
+            return $.table.tooltip(value, 20, "open");
           }
         },
         {
@@ -141,7 +141,7 @@
           field: 'remark',
           title: '备注',
           formatter: function (value, row, index) {
-            return $.table.tooltip(value, 30);
+            return $.table.tooltip(value, 30, "open");
           }
         },
         {
