--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -189,7 +189,7 @@
       title: '附加信息',
       width: '90',
       formatter: function (value, row, index) {
-        return $.table.tooltip(value, 20);
+        return $.table.tooltip(value, 20, "open");
       }
     },
     {
